# plaintest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml
docs/: api-reference.md  configuration.md  getting-started.md  index.md  usage-examples.md
plaintest/: __init__.py  analysis.py  cli.py  config.py  html_report.py  markers.py  plugin.py  template.py
plaintest/templates/: report.html.j2  styles.css.j2
test-cases/001/: case.md
test-cases/002/: case.md
test-cases/003/: case.md
test-cases/004/: case.md
test-cases/005/: case.md
test-cases/006/: case.md
test-cases/007/: case.md
tests/: test_analysis.py  test_example.py  test_template.py
