[project]
name = "plaintest"
version = "0.2.0"
description = "A pytest plugin and CLI tool for managing plain-text test cases with markdown documentation"
license = "MIT"
authors = [
    { name = "Eric Gazoni", email = "eric@adimian.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "pygments>=2.19.2",
    "python-frontmatter>=1.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ericgazoni/plaintest"
Documentation = "https://plaintest.readthedocs.io/"
Repository = "https://github.com/ericgazoni/plaintest"
Issues = "https://github.com/ericgazoni/plaintest/issues"
Changelog = "https://github.com/ericgazoni/plaintest/releases"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pre-commit>=4.5.1",
    "pymdown-extensions>=10.20.1",
    "pytest>=9.0.2",
]

[tool.black]
line-length = 79

[project.scripts]
plaintest = "plaintest.cli:main"

[tool.uv]
package = true

[tool.plaintest]
test_cases_dir = "test-cases"

[project.entry-points.pytest11]
plaintest = "plaintest.plugin"
